--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
-.App {
-    background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+.App{
+    background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
 }
