--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
-.card {
+
+.card-container {
     display:flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
 .cards {
     background-color: black;
     padding: 20px;
@@ -13,26 +15,33 @@
     position:relative;
     overflow: hidden;
 }
+
 .title {
     font-family: 'Amatic SC', cursive;
     font-size: 36px;
     padding:1rem;
+    color: white;
+
 }
-.title h2 {
+
+.title span {
     margin: 0;
     color: white;
 }
+
 .cards img {
     object-fit:cover;
-    width: 400px;
-    height: 350px;
+    width: 300px;
+    height: 250px;
     border-radius: 7px;
     filter: grayscale(0%)
 }
+
 .cards img:hover {
     filter: grayscale(100%);
 }
-.desc {
+
+.card-over {
     position:absolute;
     background-color: rgba(0,0,0, 0.5);
     color: white;
@@ -43,6 +52,24 @@
     transform: translateY(100%);
     transition: transform 0.7s ease-in-out;
 }
-.cards:hover .desc {
+
+.cards:hover .card-over {
     transform: translateY(0%);
 }
+
+.card-title{
+    font-weight:bold;
+    animation-name: shining;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    transition: box-shadow ease-in-out .4s;
+}
+
+
+
+@keyframes shining {
+    0% {color: #99C8FF;}
+    25% {color: white;}
+    100% {color:#99C8FF;}
+}
+
